--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,55 @@
     margin-right: 2rem;
 }
 
-@media (min-width: 576px) {
-    .text-wrap-sm {
-      white-space: normal !important;
-    }
+.margin {
+    margin-top: -100%;
+}
+
+.bg-brown-mode2 {
+    background: #f79f65;
+}
+
+.a_footer a > i {
+    font-size: 0.7rem;
+    padding-right: 4px;
+}
+
+.button-nav_1 {
+    background-color: #ff8356;
+    color: black;
+}
+
+.button-nav_1:hover {
+    background-color: #9b2a01;
+    color: white;
+    border-radius: 40px;
+    transition: all 0.7s;
+}
+
+
+.a_footer a:hover {
+    transform: translateY(5px);
+    color: rgb(255, 249, 249);
+    transition: transform 0.5s;
+}
+
+.a_footerbottom {
+    text-decoration: none;
+    color: rgb(0, 160, 160);
+}
+
+.c_in:focus {
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+    border-radius: 40px;
+    transition: all 1s;
+}
+
+
+.max_width {
+    max-width: 450px !important;
+}
+
+
+
 
 
