--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@
 
 
 .a_footer a:hover {
-    transform: translateY(5px);
+    transform: translateY(2px) scale(1.1);
     color: rgb(255, 249, 249);
     transition: transform 0.5s;
 }
@@ -106,9 +106,17 @@
     transition: all 1s;
 }
 
+.div_bottom a:hover {
+    color: white;
+}
+
 
 .max_width {
     max-width: 450px !important;
+}
+
+.max_width2 {
+    max-width: 500px !important;
 }
 
 
