--- a/css/style.css
+++ b/css/style.css
@@ -34,8 +34,8 @@
     background: #f79f65;
 }
 
-.carousel-item {
-    height: 100vh;
+.c11 {
+    height: 100vh !important;
     background-color: aqua;
 }
 
@@ -119,7 +119,142 @@
     max-width: 500px !important;
 }
 
+.card_scale:hover {
+    transform: scale(1.1);
+}
 
+.back1{
+    
+    background-image: url(../img/robert-anasch-McX3XuJRsUM-unsplash.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 600px;
+    background-blend-mode: multiply;
+  }  
+
+
+  .textarea{
+    height: 100px !important;
+  }
+
+  .Callus{
+    background: #3d0f01;
+  }
+
+
+  .button-nav2 {
+    background: #3d0f01;
+    color: white;
+  }
+
+  .button-nav2:hover {
+    background: white;
+    color: #3d0f01;
+  }
+
+  .c_in_2:focus {
+    box-shadow: 0 0 10px 0 white;
+    transition: all 0.5s;
+}
+
+.clap {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: -65px;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.clap2:hover .clap {
+    bottom: 0;
+    opacity: 1;
+}
+
+@keyframes pulse {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.1);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  
+  .pulsing-image {
+    animation: pulse 2s infinite;
+  }
+
+  .width_littlesquare {
+    width: 100px;
+    height: 100px;
+}
+
+.gap {
+    row-gap: 3rem;
+}
+
+
+.testimonial-img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+  }
+
+  .carousel-item {
+  
+    text-align: center;
+  }
+
+  .testimonial-text {
+    margin-top: 20px; 
+    margin-bottom: 10px; 
+  }
+  .testimonial-name {
+    margin-bottom: 0;
+  }
+
+  .carousel_button button {
+    width: 45px;
+    height: 45px;
+
+  }
+
+  .button_c:hover {
+    background-color: #ff8356;
+    color: black;
+    border: white;
+}
+
+.back_up {
+   position: fixed;
+    right: 30px;
+    bottom: 30px;
+    z-index: 3; 
+}
+
+.button_heart:hover {
+    background-color: white;
+    color: red;
+}
+
+.button_like:hover {
+    background-color: white;
+    color: blue;
+}
+
+.button_share:hover {
+    background-color: white;
+    color: aqua;
+}
+    
+.button_save:hover {
+    background-color: white;
+    color: rgb(39, 39, 112);
+}
 
 
 
